--- a/index.css
+++ b/index.css
@@ -1,13 +1,8 @@
 div{
-	display: inline-block;
-	width: 220px;
-	margin: 10px;
-	background-color: #A7A7B3;
-	vertical-align: top;
 
 }
 
-h2{
+.article_link{
 	padding-left: 6px;
 	padding-right: 6px;
 	text-align: center;
@@ -26,7 +21,9 @@ p{
 }
 
 h1 {
-	color: green;
+	color: white;
+	font-family: 'Roboto Slab';
+	padding-left: 5px;
 }
 
 a {
@@ -34,5 +31,31 @@ a {
 }
 
 a:hover{
-	text-decoration: 
+	text-decoration: underline;
+}
+
+.header{
+	width:100%;
+	height: 50px;
+	background: -webkit-linear-gradient(left, red , white); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(right, red, white); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(right, red, white); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to right, red , white); /* Standard syntax */
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 0;
+    margin-bottom: -40px;
+    padding-bottom: 20px;
+	
+}
+
+.article {
+	box-shadow: 5px 5px 5px black;
+	margin: 200px 10px 0px 10px;
+	display: inline-block;
+	background-color: #A7A7B3;
+	width:220px;
+	vertical-align: top;
+
 }
