--- a/index.css
+++ b/index.css
@@ -2,10 +2,77 @@ div{
 
 }
 
+@font-face{
+	font-family: 'Ostrich Sans';
+	src: url(ostrich-sans-inline-regular.woff);
+}
+
+.container{
+	margin-top: 30px;
+
+}
+
 .article_link{
 	padding-left: 6px;
 	padding-right: 6px;
 	text-align: center;
+}
+
+
+a:hover{
+	text-decoration: underline;
+}
+
+.header{
+	width:100%;
+	height: 50px;
+    position: fixed;
+    right: 0;
+    left: 0;
+    top: 0;
+    margin-top: 10px;
+    margin-bottom: 40px;
+    padding-bottom: 20px;
+    background-color: #5F367A;
+	
+}
+
+.article {
+	box-shadow: 5px 5px 5px black;
+	margin: 140px 10px 0px 10px;
+	display: inline-block;
+	background-color: #A7A7B3;
+	width:220px;
+	height: 160px;
+	vertical-align: top;
+	font-family: 'Ostrich Sans';
+	font-size: 20px
+
+}
+
+.article h4{
+	font-style: italic;
+}
+
+.navbar li{
+	display: inline;
+	margin: 20px 5px 0px 5px;
+	font-family: 'Ostrich Sans';
+	font-size: 24px;
+	color: white;
+	position: relative;
+	left:250px;
+	top: -20px;
+
+}
+
+.navbar {
+	margin-left: 10px;
+}
+
+.navbar li a{
+	color: white;
+
 }
 
 h4{
@@ -21,43 +88,16 @@ p{
 }
 
 div h1 {
+	font-family: 'Ostrich Sans';
 	color: white;
-	font-family: 'Roboto Slab';
 	padding-left: 5px;
+	margin-left: 5px;
+	font-size: 50px;
+	margin-bottom: 15px;
+	display:inline;
 
 }
 
 a {
 	text-decoration: none;
-}
-
-a:hover{
-	text-decoration: underline;
-}
-
-.header{
-	width:100%;
-	height: 50px;
-	background: -webkit-linear-gradient(left, red , white); 
-    background: -o-linear-gradient(right, red, white); 
-    background: -moz-linear-gradient(right, red, white); 
-    background: linear-gradient(to right, red , white);
-    position: absolute;
-    right: 0;
-    left: 0;
-    top: 0;
-    margin-bottom: -40px;
-    padding-bottom: 20px;;
-	
-}
-
-.article {
-	box-shadow: 5px 5px 5px black;
-	margin: 150px 10px 0px 10px;
-	display: inline-block;
-	background-color: #A7A7B3;
-	width:220px;
-	height: 160px;
-	vertical-align: top;
-
 }
