--- a/article.css
+++ b/article.css
@@ -3,6 +3,13 @@
 	src: url(ostrich-sans-inline-regular.woff);
 }
 
+.container{
+	margin-bottom: 150px;
+	position: fixed;
+	top: 0;
+
+}
+
 .navbar {
 	margin-left: 10px;
 }
@@ -15,12 +22,13 @@
 	color: white;
 	position: relative;
 	left:250px;
-	top: -20px;
+	top: -6px;
 
 }
 
 .navbar li a{
 	color: white;
+	text-decoration: none;
 
 }
 
@@ -53,14 +61,10 @@ a:hover{
 
 }
 
-.container{
-	margin-bottom: 150px;
-
-}
-
 .article{
 	width: 75%;
 	position: absolute;
+	margin-top: 100px;
 	margin-left: auto;
 	margin-right: auto;
 	left: 0;
