--- a/index.css
+++ b/index.css
@@ -7,6 +7,11 @@ div{
 	src: url(ostrich-sans-inline-regular.woff);
 }
 
+.content{
+
+}
+
+
 .container{
 	margin-top: 30px;
 	position: fixed;
@@ -16,20 +21,21 @@ div{
 
 .header{
 	width:100%;
-	height: 50px;
+	padding: 30px 0 10px 0;
     position: fixed;
     right: 0;
     left: 0;
     top: 0;
-    margin-top: 10px;
-    margin-bottom: 40px;
-    padding-bottom: 20px;
+    margin-bottom: 30px;
     background-color: #5F367A;
+    border-top: 10px solid white;
+    z-index: 2;
 	
 }
 
-.navbar ul{
-
+.header h1{
+	position: relative;
+	top: -30px;
 }
 
 .navbar li{
@@ -41,6 +47,7 @@ div{
 	position: relative;
 	left:250px;
 	top: -36px;
+	z-index: 2
 
 }
 
@@ -74,7 +81,13 @@ a:hover{
 	vertical-align: top;
 	font-family: 'Ostrich Sans';
 	font-size: 20px;
+	-webkit-transition: background .5s;
 
+
+}
+
+.article:hover{
+	background: white;
 }
 
 .article h2{
@@ -93,11 +106,6 @@ h4{
 	text-align: center;
 }
 
-p{
-	padding-left: 6px;
-	padding-right: 6px;
-	text-align: justify;
-}
 
 div h1 {
 	font-family: 'Ostrich Sans';
@@ -112,4 +120,18 @@ div h1 {
 
 a {
 	text-decoration: none;
+}
+
+.footer{
+	font-family: 'Ostrich Sans';
+	font-size: 25px;
+	clear: both;
+	color: white;
+	background: #5F367A;
+	padding: 10px;
+	position: fixed;
+	bottom:0;
+	left: 0;
+	right: 0;
+	width: 100%;
 }
